<resources>
    <string name="app_name">News</string>
    <string name="global">Global</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_feed">News feed</string>
    <string name="united_arab_emirates">United Arab Emirates</string>
    <string name="argentina">Argentina</string>
    <string name="austria">Austria</string>
    <string name="australia">Australia</string>
    <string name="belgium">Belgium</string>
    <string name="bulgaria">Bulgaria</string>
    <string name="brazil">Brazil</string>
    <string name="canada">Canada</string>
    <string name="switzerland">Switzerland</string>
    <string name="china">China</string>
    <string name="colombia">Colombia</string>
    <string name="cuba">Cuba</string>
    <string name="czechia">Czechia</string>
    <string name="germany">Germany</string>
    <string name="egypt">Egypt</string>
    <string name="france">France</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="greece">Greece</string>
    <string name="hong_kong">Hong Kong</string>
    <string name="hungary">Hungary</string>
    <string name="indonesia">Indonesia</string>
    <string name="ireland">Ireland</string>
    <string name="israel">Israel</string>
    <string name="india">India</string>
    <string name="italy">Italy</string>
    <string name="japan">Japan</string>
    <string name="korea">Korea</string>
    <string name="lithuania">Lithuania</string>
    <string name="latvia">Latvia</string>
    <string name="morocco">Morocco</string>
    <string name="mexico">Mexico</string>
    <string name="malaysia">Malaysia</string>
    <string name="nigeria">Nigeria</string>
    <string name="netherlands">Netherlands</string>
    <string name="norway">Norway</string>
    <string name="new_zealand">New Zealand</string>
    <string name="philippines">Philippines</string>
    <string name="poland">Poland</string>
    <string name="portugal">Portugal</string>
    <string name="romania">Romania</string>
    <string name="serbia">Serbia</string>
    <string name="russia">Russia</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="sweden">Sweden</string>
    <string name="singapore">Singapore</string>
    <string name="slovenia">Slovenia</string>
    <string name="slovakia">Slovakia</string>
    <string name="thailand">Thailand</string>
    <string name="turkey">Turkey</string>
    <string name="taiwan">Taiwan</string>
    <string name="ukraine">Ukraine</string>
    <string name="venezuela">Venezuela</string>
    <string name="usa">USA</string>
    <string name="south_africa">South Africa</string>
    <string name="retry">Retry</string>
    <string name="disconnected">Соединение с сервером отсутствует, показаны сохранённые объекты</string>
    <string name="refreshed">Список обновлен</string>
</resources>