<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/ae"
        android:title="@string/united_arab_emirates" />
    <item android:id="@+id/ar"
        android:title="@string/argentina" />
    <item android:id="@+id/at"
        android:title="@string/austria" />
    <item android:id="@+id/au"
        android:title="@string/australia" />
    <item android:id="@+id/be"
        android:title="@string/belgium" />
    <item android:id="@+id/bg"
        android:title="@string/bulgaria" />
    <item android:id="@+id/br"
        android:title="@string/brazil" />
    <item android:id="@+id/ca"
        android:title="@string/canada" />
    <item android:id="@+id/ch"
        android:title="@string/switzerland" />
    <item android:id="@+id/cn"
        android:title="@string/china" />
    <item android:id="@+id/co"
        android:title="@string/colombia" />
    <item android:id="@+id/cu"
        android:title="@string/cuba" />
    <item android:id="@+id/cz"
        android:title="@string/czechia" />
    <item android:id="@+id/de"
        android:title="@string/germany" />
    <item android:id="@+id/eg"
        android:title="@string/egypt" />
    <item android:id="@+id/fr"
        android:title="@string/france" />
    <item android:id="@+id/gb"
        android:title="@string/united_kingdom" />
    <item android:id="@+id/gr"
        android:title="@string/greece" />
    <item android:id="@+id/hk"
        android:title="@string/hong_kong" />
    <item android:id="@+id/hu"
        android:title="@string/hungary" />
    <item android:id="@+id/id"
        android:title="@string/indonesia" />
    <item android:id="@+id/ie"
        android:title="@string/ireland" />
    <item android:id="@+id/il"
        android:title="@string/israel" />
    <item android:id="@+id/ind"
        android:title="@string/india" />
    <item android:id="@+id/it"
        android:title="@string/italy" />
    <item android:id="@+id/jp"
        android:title="@string/japan" />
    <item android:id="@+id/kr"
        android:title="@string/korea" />
    <item android:id="@+id/lt"
        android:title="@string/lithuania" />
    <item android:id="@+id/lv"
        android:title="@string/latvia" />
    <item android:id="@+id/ma"
        android:title="@string/morocco" />
    <item android:id="@+id/mx"
        android:title="@string/mexico" />
    <item android:id="@+id/my"
        android:title="@string/malaysia" />
    <item android:id="@+id/ng"
        android:title="@string/nigeria" />
    <item android:id="@+id/nl"
        android:title="@string/netherlands" />
    <item android:id="@+id/no"
        android:title="@string/norway" />
    <item android:id="@+id/nz"
        android:title="@string/new_zealand" />
    <item android:id="@+id/ph"
        android:title="@string/philippines" />
    <item android:id="@+id/pl"
        android:title="@string/poland" />
    <item android:id="@+id/pt"
        android:title="@string/portugal" />
    <item android:id="@+id/ro"
        android:title="@string/romania" />
    <item android:id="@+id/rs"
        android:title="@string/serbia" />
    <item android:id="@+id/ru"
        android:title="@string/russia" />
    <item android:id="@+id/sa"
        android:title="@string/saudi_arabia" />
    <item android:id="@+id/se"
        android:title="@string/sweden" />
    <item android:id="@+id/sg"
        android:title="@string/singapore" />
    <item android:id="@+id/si"
        android:title="@string/slovenia" />
    <item android:id="@+id/sk"
        android:title="@string/slovakia" />
    <item android:id="@+id/th"
        android:title="@string/thailand" />
    <item android:id="@+id/tr"
        android:title="@string/turkey" />
    <item android:id="@+id/tw"
        android:title="@string/taiwan" />
    <item android:id="@+id/ua"
        android:title="@string/ukraine" />
    <item android:id="@+id/us"
        android:title="@string/usa" />
    <item android:id="@+id/ve"
        android:title="@string/venezuela" />
    <item android:id="@+id/za"
        android:title="@string/south_africa" />
</menu>

